* Added error-prone, fixed issues